--- a/python/html.html
+++ b/python/html.html
@@ -16,9 +16,9 @@
 <form action="python.py" method="post" >
     <table class="center">
         <h4 style="font-family: Verdana ; font-size: 98%; text-align:center;">Enter the Names of Persons Involved</h4>
-        <tr><td>Person 1 :</td><td><input type="text" name="p1"></td></tr>
-        <tr><td>Person 2 :</td><td> <input type="text" name="p2"></td></tr>
-        <tr><td>Person 3 :</td><td> <input type="text" name="p3"></td></tr>
+        <tr><td>Person 1 :</td><td><input type="text" pattern="[a-zA-Z]+" name="p1"></td></tr>
+        <tr><td>Person 2 :</td><td> <input type="text" pattern="[a-zA-Z]+" name="p2"></td></tr>
+        <tr><td>Person 3 :</td><td> <input type="text" pattern="[a-zA-Z]+" name="p3"></td></tr>
           
     </table>
 
